# llm-multi-provider-chat-gemini-openai-os

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shared/: __init__.py  adapter.py  providers.py  vector_schema.py
src/chat_core/: __init__.py  main.py  memory.py  pipeline.py  tools.py
src/chat_core/static/: index.html
tests/: test_chat.py  test_health.py
