[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-1-multi-provider-chat"
version = "0.1.0"
description = "Multi-provider LLM chat with streaming, memory, function-calling, and provider routing"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "shared*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "shared", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src", "shared"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "langchain.*", "langchain_core.*", "langchain_google_genai.*",
    "langchain_google_vertexai.*", "langchain_openai.*", "langchain_anthropic.*",
    "langchain_aws.*", "langchain_community.*", "fastapi.*", "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast tests with no network or LLM calls",
    "integration: requires live API keys",
]
